manifests/networking/gateway-api/mtls.yml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: ecom
spec:
  mtls:
    mode: PERMISSIVE
