manifests/networking/gateway-api/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ecom-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
      # hostname: "shop.local"   # 🔥 ADD THIS LINE
    allowedRoutes:
      namespaces:
        from: All
