manifests/networking/gateway-api/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecom-route
  namespace: ecom
spec:
  parentRefs:
  - name: ecom-gateway
    namespace: istio-system

      # hostnames:
      # - "shop.local"   # 👈 domain

  rules:

  # 🔥 API ROUTE (FIRST)
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: api-gateway
      port: 8080

  # 🔥 FRONTEND ROUTE
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 80
